name:          mgsloan-site
version:       3.0.0
synopsis:      Static site generator for mgsloan's personal blog
homepage:      https://mgsloan.com
author:        Ruud van Asseldonk <dev@veniogames.com>
               Michael Sloan <mgsloan@gmail.com>
copyright:     Ruud van Asseldonk 2015
               Michael Sloan 2018
license:       GPL-3
license-file:  license
build-type:    Simple
cabal-version: >= 1.10

executable mgsloan-site
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Html, Image, Minification, Post, Template, Type, Mode
  default-language: Haskell2010
  -- For the run time options, use 4 threads (-N4), and use a heap of 256 MiB
  -- (-H). These settings were found to be optimal by running ghc-gc-tune.
  ghc-options:      -Wall -fwarn-tabs -O3 -threaded -rtsopts "-with-rtsopts=-N4 -A8388608 -H268435456"

  build-depends: async
               , base
               , containers
               , directory
               , filepath
               , hashable
               , JuicyPixels
               , network-uri
               , pandoc
               , process
               , shelly
               , tagsoup
               , text
               , time
